--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Edit meta tags for SEO -->
+    <meta name="title" content="Kate Moore - Portfolio">
+    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
+    <meta property="og:title" content="Kate Moore - Portfolio">
+    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <!-- Link to a hosted image -->
+    <!-- <meta property="og:image" content=""> -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
+    <meta property="twitter:title" content="Kate Moore - Portfolio">
+    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <!-- Link to a hosted image -->
+    <!-- <meta property="twitter:image" content=""> -->
 </head>
 
 <body>
