--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style type="text/css">@font-face{font-family:'Poppins';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJbecnFHGPezSQ.woff2) format('woff2');unicode-range:U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FF;}@font-face{font-family:'Poppins';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJnecnFHGPezSQ.woff2) format('woff2');unicode-range:U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Poppins';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}</style>
+    <!-- Edit meta tags for SEO -->
+    <meta name="title" content="Kate Moore - Portfolio">
+    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
+    <meta property="og:title" content="Kate Moore - Portfolio">
+    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <!-- Link to a hosted image -->
+    <!-- <meta property="og:image" content=""> -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
+    <meta property="twitter:title" content="Kate Moore - Portfolio">
+    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <!-- Link to a hosted image -->
+    <!-- <meta property="twitter:image" content=""> -->
 <style>:root{--primary-color:#7f00fd;--primary-color-dark:#7200e4;--secondary-color:#F1F5F9;--text-color:#475569;--heading-color:#334155;--nav-link-color:rgba(0, 0, 0, .65);--nav-link-hover-color:rgba(0, 0, 0, .8);--sidenav-toggler-color:rgba(0, 0, 0, .65);--sidenav-toggler-hover-color:rgba(0, 0, 0, .8);--social-icon-color:#d8dbe1;--social-icon-hover-color:#cccfd7}html{font-size:100%;scroll-behavior:smooth}body{font-family:Poppins,sans-serif;margin:0;color:var(--text-color);font-size:1rem}*{box-sizing:border-box}@media (min-width: 768px){body{font-size:1.125rem}}</style><link rel="stylesheet" href="styles.cebac3428298d18b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.cebac3428298d18b.css"></noscript></head>
 
 <body>
