deploy: 21564a310142e4a63f930fbd88b93c2b3f7ac799

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
-<style>:root{--primary-color:#7f00fd;--primary-color-dark:#7200e4;--secondary-color:#F1F5F9;--text-color:#475569;--heading-color:#334155;--nav-link-color:rgba(0, 0, 0, .65);--nav-link-hover-color:rgba(0, 0, 0, .8);--sidenav-toggler-color:rgba(0, 0, 0, .65);--sidenav-toggler-hover-color:rgba(0, 0, 0, .8);--social-icon-color:#d8dbe1;--social-icon-hover-color:#cccfd7}html{font-size:100%;scroll-behavior:smooth}body{font-family:Poppins,sans-serif;margin:0;color:var(--text-color);font-size:1rem}*{box-sizing:border-box}@media (min-width: 768px){body{font-size:1.125rem}}</style><link rel="stylesheet" href="styles.cebac3428298d18b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.cebac3428298d18b.css"></noscript></head>
+<style>body{--primary-color:#7f00fd;--primary-color-rgb:127, 0, 253;--primary-color-dark:#7200e4;--secondary-color:#F1F5F9;--body-color:#fff;--text-color:#475569;--heading-color:#334155;--nav-color:#fff;--nav-link-color:rgba(0, 0, 0, .65);--nav-link-hover-color:rgba(0, 0, 0, .8);--sidenav-toggler-color:rgba(0, 0, 0, .65);--sidenav-toggler-hover-color:rgba(0, 0, 0, .8);--social-icon-text-color:#475569;--social-icon-color:#d8dbe1;--social-icon-hover-color:#cccfd7;--border-color:rgb(203, 213, 225);--border-focus-color:rgb(148, 163, 184);--experience-border-color:rgba(11, 11, 19, .05);--carousel-border-color:#E6ECF8}html{font-size:100%;scroll-behavior:smooth}body{font-family:Poppins,sans-serif;margin:0;color:var(--text-color);font-size:1rem;background-color:var(--body-color)}*{box-sizing:border-box}@media (min-width: 768px){body{font-size:1.125rem}}</style><link rel="stylesheet" href="styles.38e4abdb31fab727.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.38e4abdb31fab727.css"></noscript></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime.5d38d922f675f4ac.js" type="module"></script><script src="polyfills.dc765a6cdd32508a.js" type="module"></script><script src="main.b9545fe2a2e3b885.js" type="module"></script></body>
+<script src="runtime.5d38d922f675f4ac.js" type="module"></script><script src="polyfills.dc765a6cdd32508a.js" type="module"></script><script src="main.d46711b727890325.js" type="module"></script></body>
 
 </html>
