--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Abdellah WADJINNY  - Portfolio</title>
+  <title>Abdellah WADJINNY - Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Edit meta tags for SEO -->
-    <meta name="title" content="Kate Moore - Portfolio">
+    <meta name="title" content="Abdellah WADJINNY - Portfolio">
     <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
-    <meta property="og:title" content="Kate Moore - Portfolio">
+    <meta property="og:title" content="Abdellah WADJINNY - Portfolio">
     <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
@@ -23,7 +23,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
-    <meta property="twitter:title" content="Kate Moore - Portfolio">
+    <meta property="twitter:title" content="Abdellah WADJINNY - Portfolio">
     <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
