--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Edit meta tags for SEO -->
     <meta name="title" content="Abdellah WADJINNY - Portfolio">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <meta property="og:description" content="Data Engineer Portfolio">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
+    <meta property="og:url" content="https://wwww.wadjinny.com">
     <meta property="og:title" content="Abdellah WADJINNY - Portfolio">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <meta property="og:description" content="Data Engineer Portfolio">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:url" content="https://lorenzomiscoli.github.io/developer-portfolio/">
-    <meta property="twitter:title" content="Abdellah WADJINNY - Portfolio">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills">
+    <meta property="og:url" content="https://wwww.wadjinny.com">
+    <meta property="og:title" content="Abdellah WADJINNY - Portfolio">
+    <meta property="og:description" content="Data Engineer Portfolio">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 </head>
