--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+  <script src="https://assets.calendly.com/assets/external/widget.js"></script>
+
     <!-- Edit meta tags for SEO -->
     <meta name="title" content="Abdellah WADJINNY - Portfolio">
     <meta property="og:description" content="Data Engineer Portfolio">
