--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Edit meta tags for SEO -->
     <meta name="title" content="Abdellah WADJINNY - Portfolio">
