add get in touch

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+
+  <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/awadjinny/15-phone-call', text: 'Schedule time with me', color: '#7F00FD', textColor: '#ffffff', branding: undefined }); }</script>
+
+
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Edit meta tags for SEO -->
